增加表同步功能